--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-urls==1.1.3
 djangorestframework==3.14.0
 durationpy==0.5
 filelock==3.12.2
+gunicorn==20.1.0
 hjson==3.1.0
 idna==3.4
 jmespath==1.0.1
