--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,9 @@ colorama==0.4.6
 cryptography==41.0.1
 defusedxml==0.7.1
 distlib==0.3.6
-dj-rest-auth==4.0.1
+dj-rest-auth==4.0.0
 Django==4.2.2
-django-allauth==0.54.0
+django-allauth==0.52.0
 django-apps==0.1.0
 django-config-url==0.1.1
 django-rest-auth==0.9.5
@@ -26,9 +26,12 @@ gunicorn==20.1.0
 hjson==3.1.0
 idna==3.4
 jmespath==1.0.1
+joblib==1.2.0
 kappa==0.6.0
 MarkupSafe==2.1.3
+numpy==1.25.0
 oauthlib==3.2.2
+pandas==2.0.2
 Pillow==9.5.0
 placebo==0.9.0
 platformdirs==3.7.0
@@ -42,9 +45,12 @@ PyYAML==6.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 s3transfer==0.6.1
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 sqlparse==0.4.4
 text-unidecode==1.3
+threadpoolctl==3.1.0
 toml==0.10.2
 tqdm==4.65.0
 troposphere==4.3.2
