--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-rest-auth==0.9.5
 django-rest-framework==0.1.0
 django-urls==1.1.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 durationpy==0.5
 filelock==3.12.2
 gunicorn==20.1.0
@@ -32,6 +33,7 @@ MarkupSafe==2.1.3
 numpy==1.25.0
 oauthlib==3.2.2
 pandas==2.0.2
+phonenumbers==8.13.6
 Pillow==9.5.0
 placebo==0.9.0
 platformdirs==3.7.0
