--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-apps==0.1.0
 django-config-url==0.1.1
 django-rest-auth==0.9.5
 django-rest-framework==0.1.0
+django-storages==1.13.2
 django-urls==1.1.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
